# db_course

./: manage.py  pyproject.toml
authentication/: forms.py  models.py  views.py
authentication/migrations/: 0001_initial.py
bd_course/: asgi.py  settings.py  urls.py  wsgi.py
club_members/: admin.py  apps.py  forms.py  models.py  views.py
club_members/migrations/: 0001_initial.py  0002_alter_location_description.py  0003_location_header.py  0004_news.py  0005_document.py
services/: backup.py
static/css/: style.css
templates/authentication/: user_login.html  user_register.html
templates/buy_crayfish/: locations.html  map.html
templates/general/: about_club.html  base.html  club_news.html  documents_list.html  news.html  news_list.html  upload_document.html
templates/profiles/: detail.html  profiles_list.html
