[tool.poetry]
name = "bd-course"
version = "0.1.0"
description = ""
authors = ["Dmitrii <dimamedv1@gmail.com>"]
readme = "README.md"
packages = [{include = "bd_course"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
